--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 17 Jan 2008
+  Last Modified: 5 Feb 2008
   Number: 2
-  Version: 126
+  Version: 127
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1292,7 +1292,8 @@ is subject to:
 
     $foo        ordinary scoping
     $.foo       object attribute accessor
-    $^foo       self-declared formal parameter
+    $^foo       self-declared formal positional parameter
+    $:foo       self-declared formal named parameter
     $*foo       global variable
     $+foo       contextual variable
     $?foo       compiler hint variable
@@ -1582,6 +1583,10 @@ anonymous variables:
 
     my ($a, $, $c) = 1..3;
     print unless (state $)++;
+
+Outside of declarative contexts you may use C<*> for a placeholder:
+
+    ($a, *, $c) = 1..3;
 
 =item *
 
