--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 5 Feb 2008
+  Last Modified: 8 Feb 2008
   Number: 2
-  Version: 127
+  Version: 128
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -582,7 +582,7 @@ look like the same object if they happen to have the same contents.
 =item *
 
 Variables with non-native types can always contain I<undefined> values,
-such as C<Undef>, C<Whatever> and C<Failure> objects.  See S04 for more
+such as C<Object>, C<Whatever> and C<Failure> objects.  See S04 for more
 about failures (i.e. unthrown exceptions):
 
     my Int $x = undef;    # works
@@ -856,12 +856,20 @@ C<defined> always returns false.  One can create them with the
 built-in C<undef> and C<fail> functions.  (See S04 for how failures
 are handled.)
 
-    Undef       Undefined (variants serve as prototype objects of classes)
+    Object      Uninitialized (derivatives serve as protoobjects of classes)
     Whatever    Wildcard (like undef, but subject to do-what-I-mean via MMD)
     Failure     Failure (lazy exceptions, thrown if not handled properly)
 
 Whenever you declare any kind of type, class, module, or package, you're
 automatically declaring a undefined prototype value with the same name.
+
+Whenever a C<Failure> value is put into a typed container, it takes
+on the type specified by the container but continues to carry the
+C<Failure> role.  (The C<undef> function merely returns the most
+generic C<Failure> object.  Use C<fail> to more specific failures.  Use
+C<Object> for the most generic non-failure undefined value.  The C<Any>
+type is also undefined, but excludes C<Junctions> so that autothreading
+may be dispatched using normal multiple dispatch rules.)
 
 =head2 Immutable types
 
