Clarification from Thom Boyer++
git-svn-id: http://svn.pugscode.org/pugs@23955 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -907,7 +907,7 @@ extract a normal value will throw its associated exception immediately.
 (The C<Failure> may, however, be stored in any container whose type
 allows the C<Failure> role to be mixed in.)  The C<.handled> method
 returns false on failures that have not been handled.  It returns true for
-handled exceptions and for every other kind of object. (That is,
+handled exceptions and for all non-C<Failure> objects. (That is,
 it is an C<Object> method, not a C<Failure> method.  Only C<Failure> objects
 need to store the actual status however; other types just return C<True>.)
 
